<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Constants -->
    <string name="app_name">PowerUp</string>
    <string name="minus_infinity">-\u221E</string>
    <string name="horizon_limit">I am the last thing in horizon</string>
    <string name="not_available">N/A</string>
    <string name="zero_percent">0%</string>
    <string name="social_share_message">I flew #powerup3 and it was awesome!</string>
    <string name="shareWithPictureMessage">Share PowerUp 3.0 with friends</string>
    <string name="shareWithPictureYes">Add photo</string>
    <string name="shareWithPictureNo">Just text</string>
    <string name="shareWithPictureCancel">Cancel</string>
    <string name="social_share_success">Sharing successful.</string>
    <string name="social_share_picture_problem">Error while taking picture.</string>
    <string name="social_share_title"> </string>
    <string name="info_softwareData">Software: unknown</string>
    <string name="info_hardwareData">Hardware: unknown</string>
    <string name="unknown">unknown</string>

    <!-- Accessibility descriptions -->
    <string name="desc_imgPanel">Control Panel</string>
    <string name="desc_throttleLock">Throttle lock</string>
    <string name="desc_throttleSlider">Throttle Slider</string>
    <string name="desc_throttleNeedle">Throttle Needle</string>
    <string name="desc_fuelNeedle">Fuel Needle</string>
    <string name="desc_signalNeedle">Signal Needle</string>
    <string name="desc_imageHorizon">Image Horizon</string>
    <string name="desc_centralRuler">Central Ruler</string>
    <string name="desc_compass">Compass</string>
    <string name="desc_horizonBorder">Windshield border</string>
    <string name="desc_runway">Runway</string>
    <string name="desc_info">App Info</string>
    <string name="desc_atcOff">Air Traffic Control OFF</string>
    <string name="desc_atcOn">Air Traffic Control ON</string>
    <string name="desc_socialShare">Share Button</string>
    <string name="desc_checklist">Checklist</string>
    <string name="desc_shadow_cover">Shadow cover</string>


    <!-- TextViews labels -->
    <string name="label_fuel">FUEL</string>
    <string name="label_signal">SIGNAL</string>
    <string name="label_battery">BATTERY</string>
    <string name="label_signalStrength">dBm</string>
    <string name="label_compass">HDG</string>
    <string name="label_searching">Searching&#8230;</string>
    <string name="label_connecting">Connecting&#8230;</string>
    <string name="label_revRudder">Reverse Rudder</string>
    <string name="label_flightAssist">Flight Assist</string>
    <string name="label_weatherCenter">Weather Center</string>
    <string name="label_settings">Settings</string>
    <string name="label_tower">ATC Tower</string>

    <!-- Checklist items -->
    <string name="checklist_title">Flight checklist</string>
    <string name="checklist_text">
    \ <u>BEFORE TAKEOFF</u>\n <!-- notice the \ at the beginning -->
        Check Weather Center\n
    Other air traffic\n
    Turn on plane\n
    Connection established\n
    Rudder left/right\n
    Throttle check\n
    Check fuel\n
    Tower on/off\n\n
    <u>AFTER LANDING</u>\n
    Check fuel\n
    Turn off plane\n\n
    <u>CHARGING / RE-FUELING</u>\n
    Turn on plane\n
    Plug in cable\n
    Check LED\n
    </string>
    <string name="title_activity_main_screen">DETI\'s BLIMP</string>

    <string name="button_solo">Solo</string>
    <string name="button_multiplayer">Multiplayer</string>
    <string name="title_activity_info">InfoActivity</string>

    <string name="info_text">
        This App was developed by a team of 6 members from Universidade de Aveiro. \n
        The goal was to create an APP using the open source APP from TaylorToys to fly a blimp on PowerUp3.0. \n


        The source code can be found at https://github.com/joao34/PEI.git .
        The source of the API used can be found at https://github.com/TailorToys/app-powerup-android.git .
        Special thanks to our tutor Jose Maria Fernandes.
        </string>

    <string name="facebook_app_id">1693896314215344</string>

</resources>
