<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fullscreen_content"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context=".FullscreenActivity">

    <RelativeLayout
        android:id="@+id/controlPanel"
        android:layout_width="fill_parent"
        android:layout_height="190dp"
        android:layout_alignParentBottom="true">

        <ImageView
            android:id="@+id/imgPanel"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/desc_imgPanel"
            android:scaleType="centerCrop"
            android:src="@drawable/panel_640x342" />


        <ImageView
            android:id="@+id/imgThrottleNeedle"
            android:layout_width="150dp"
            android:layout_height="95dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="6dp"
            android:layout_marginLeft="14dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/desc_throttleNeedle"
            android:rotation="-140"
            android:src="@drawable/needle_right_circle_up" />

        <ImageView
            android:id="@+id/imgFuelNeedle"
            android:layout_width="105dp"
            android:layout_height="wrap_content"
            android:layout_above="@id/imgThrottleNeedle"
            android:layout_marginBottom="-38dp"
            android:layout_marginLeft="70dp"
            android:layout_toRightOf="@id/imgThrottleNeedle"
            android:adjustViewBounds="true"
            android:contentDescription="@string/desc_fuelNeedle"
            android:rotation="-90"
            android:src="@drawable/needle_right_circle_up" />

        <ImageView
            android:id="@+id/imgSignalNeedle"
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:layout_alignBottom="@id/imgThrottleNeedle"
            android:layout_alignEnd="@id/imgFuelNeedle"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="2dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/desc_signalNeedle"
            android:rotation="0"
            android:src="@drawable/needle_right_circle_up" />

        <TextView
            android:id="@+id/throttleValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/imgSignalNeedle"
            android:layout_alignEnd="@id/imgThrottleNeedle"
            android:layout_marginBottom="10dp"
            android:layout_marginRight="53dp"
            android:text="@string/zero_percent"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textStyle="bold|normal" />

        <TextView
            android:id="@+id/signalValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/throttleValue"
            android:layout_alignStart="@id/imgSignalNeedle"
            android:layout_marginBottom="-1.5dp"
            android:layout_marginLeft="1dp"
            android:singleLine="false"
            android:text="@string/minus_infinity"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textStyle="bold|normal" />

        <TextView
            android:id="@+id/textSignal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/imgFuelNeedle"
            android:layout_alignEnd="@id/signalValue"
            android:layout_marginRight="-4dp"
            android:text="@string/label_signal"
            android:textColor="#BBCC00"
            android:textSize="12sp"
            android:textStyle="bold|normal"
            android:typeface="sans" />

        <TextView
            android:id="@+id/batteryLevelText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/imgSignalNeedle"
            android:layout_alignStart="@id/signalValue"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="12dp"
            android:singleLine="false"
            android:text="@string/not_available"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textStyle="bold|normal" />

        <TextView
            android:id="@+id/textDBM"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/imgSignalNeedle"
            android:layout_alignStart="@id/textSignal"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="18dp"
            android:text="@string/label_signalStrength"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/textFuel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/imgFuelNeedle"
            android:layout_alignStart="@id/imgSignalNeedle"
            android:layout_marginLeft="10dp"
            android:text="@string/label_fuel"
            android:textColor="#BBCC00"
            android:textSize="12sp"
            android:textStyle="bold|normal"
            android:typeface="sans" />

        <TextView
            android:id="@+id/textBattery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/textFuel"
            android:layout_alignStart="@id/imgThrottleNeedle"
            android:layout_marginBottom="4dp"
            android:layout_marginLeft="6dp"
            android:text="@string/label_battery"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="#BBCC00"
            android:textSize="12sp"
            android:textStyle="bold|normal"
            android:typeface="sans" />

        <TextView
            android:id="@+id/textHDG"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@id/textBattery"
            android:layout_alignTop="@id/imgFuelNeedle"
            android:layout_marginRight="20dp"
            android:layout_marginTop="15dp"
            android:text="@string/label_compass"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="#BBCC00"
            android:textSize="12sp"
            android:textStyle="bold|normal" />

        <ImageView
            android:id="@+id/lockThrottle"
            android:layout_width="200dp"
            android:layout_height="145dp"
            android:layout_alignBottom="@id/textDBM"
            android:layout_alignEnd="@id/textFuel"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@id/textBattery"
            android:contentDescription="@string/desc_throttleLock"
            android:src="@drawable/throttle_locked"
            android:visibility="invisible" />

        <ImageView
            android:id="@+id/throttleCursor"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_alignTop="@id/textSignal"
            android:layout_marginLeft="114dp"
            android:layout_marginTop="40dp"
            android:layout_toLeftOf="@id/textSignal"
            android:adjustViewBounds="true"
            android:baselineAlignBottom="false"
            android:contentDescription="@string/desc_throttleSlider"
            android:longClickable="false"
            android:paddingLeft="20dp"
            android:scaleType="fitCenter"
            android:src="@drawable/controller" />

        <TextView
            android:id="@+id/batteryStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@id/throttleValue"
            android:layout_below="@id/textBattery"
            android:layout_marginRight="14dp"
            android:layout_marginTop="-4dp"
            android:text="@string/not_available"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textSize="13sp"
            android:textStyle="bold|normal" />

        <TextView
            android:id="@+id/hdgValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@id/textBattery"
            android:layout_alignTop="@id/textHDG"
            android:layout_marginRight="-12dp"
            android:layout_marginTop="6dp"
            android:text="@string/not_available"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textStyle="bold|normal" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/artificialHorizon"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@id/controlPanel">

        <TextView
            android:id="@+id/textView"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="false"
            android:layout_alignParentRight="false"
            android:gravity="center"
            android:text="@string/horizon_limit"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <FrameLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <ImageView
                android:id="@+id/imageHorizon"
                android:layout_width="600dp"
                android:layout_height="650dp"
                android:layout_gravity="center"
                android:clickable="false"
                android:contentDescription="@string/desc_imageHorizon"
                android:scaleType="centerCrop"
                android:src="@drawable/horizon" />

            <ImageView
                android:id="@+id/rulerMiddle"
                android:layout_width="25dp"
                android:layout_height="600dp"
                android:layout_gravity="center"
                android:contentDescription="@string/desc_centralRuler"
                android:scaleType="centerCrop"
                android:src="@drawable/rule_middle" />

            <ImageView
                android:id="@+id/compass"
                android:layout_width="433dp"
                android:layout_height="453dp"
                android:layout_gravity="center_horizontal|bottom"
                android:layout_marginBottom="-150dp"
                android:contentDescription="@string/desc_compass"
                android:rotation="0"
                android:src="@drawable/compass" />

            <ImageView
                android:id="@+id/imgHorizonCover"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:contentDescription="@string/desc_horizonBorder"
                android:scaleType="fitXY"
                android:src="@drawable/cover" />

            <ImageView
                android:id="@+id/runway"
                android:layout_width="180dp"
                android:layout_height="46dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:contentDescription="@string/desc_runway"
                android:src="@drawable/runaway_lines" />

            <TextView
                android:id="@+id/txtSearching"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/label_searching"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="#2b2b2b"
                android:textSize="30sp" />

            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyleLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|bottom"
                android:layout_marginBottom="70dp" />

            <ImageView
                android:id="@+id/settings"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="left|top"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="30dp"
                android:contentDescription="@string/desc_settings"
                android:src="@drawable/rudder" />

            <ImageView
                android:id="@+id/imgInfo"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="right|bottom"
                android:layout_marginBottom="15dp"
                android:layout_marginRight="22dp"
                android:clickable="true"
                android:contentDescription="@string/desc_info"
                android:focusableInTouchMode="false"
                android:src="@drawable/information" />

            <ImageView
                android:id="@+id/socialShare"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="right|top"
                android:layout_marginRight="22dp"
                android:layout_marginTop="30dp"
                android:contentDescription="@string/desc_socialShare"
                android:src="@drawable/social_share" />

            <ImageView
                android:id="@+id/atcOff"
                android:layout_width="69dp"
                android:layout_height="69dp"
                android:layout_gravity="left|bottom"
                android:clickable="false"
                android:contentDescription="@string/desc_atcOff"
                android:src="@drawable/atc_off" />

            <ImageView
                android:id="@+id/atcOn"
                android:layout_width="69dp"
                android:layout_height="69dp"
                android:layout_gravity="left|bottom"
                android:clickable="false"
                android:contentDescription="@string/desc_atcOn"
                android:src="@drawable/atc_on"
                android:visibility="invisible" />

            <Switch
                android:id="@+id/rudderSwitch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left|top"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="80dp"
                android:visibility="invisible" />

            <TextView
                android:id="@+id/revRudderText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left|top"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="58dp"
                android:text="@string/label_revRudder"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="#000000"
                android:textSize="18sp"
                android:textStyle="bold"
                android:visibility="invisible" />

            <Button
                android:id="@+id/flAssistOffBtn"
                android:layout_width="110dp"
                android:layout_height="40dp"
                android:layout_gravity="left|top"
                android:layout_marginLeft="220dp"
                android:layout_marginTop="80dp"
                android:alpha="0.85"
                android:padding="3dp"
                android:text="Off"
                android:textColor="@color/black"
                android:visibility="invisible" />

            <Button
                android:id="@+id/flAssistBeginnerBtn"
                android:layout_width="110dp"
                android:layout_height="40dp"
                android:layout_gravity="left|top"
                android:layout_marginLeft="220dp"
                android:layout_marginTop="120dp"
                android:alpha="0.85"
                android:padding="3dp"
                android:text="Beginner"
                android:textColor="@color/black"
                android:visibility="invisible" />

            <Button
                android:id="@+id/flAssistAdvancedBtn"
                android:layout_width="110dp"
                android:layout_height="40dp"
                android:layout_gravity="left|top"
                android:layout_marginLeft="220dp"
                android:layout_marginTop="160dp"
                android:alpha="0.85"
                android:padding="3dp"
                android:text="Advanced"
                android:textColor="@color/black"
                android:visibility="invisible" />

            <TextView
                android:id="@+id/flAssistText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left|top"
                android:layout_marginLeft="226dp"
                android:layout_marginTop="58dp"
                android:text="@string/label_flightAssist"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="#000000"
                android:textSize="18sp"
                android:textStyle="bold"
                android:visibility="invisible" />


        </FrameLayout>
    </RelativeLayout>

</RelativeLayout>
